Ignore serviceAccountKey.json

--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ echo "src/hbs/Notifications/serviceAccountKey.json" >> .gitignore
 git add .gitignore
 git commit -m "Ignore serviceAccountKey.json"
 src/hbs/Notifications/serviceAccountKey.json
+src/hbs/Notifications/serviceAccountKey.json
